--- a/src/components/codeManager.module.scss
+++ b/src/components/codeManager.module.scss
@@ -9,7 +9,11 @@ div.section{
     input[type="text"],select{
         height: 2em;
         font-size: 1.25rem;
+        border: solid 1px #ccc;
+        border-radius: 0.25rem;
+        margin-bottom: 0.15rem;
     }
+    
     *:not(.label){
         width: 100%;
         box-sizing: border-box;
