--- a/src/components/textEditor.module.scss
+++ b/src/components/textEditor.module.scss
@@ -1,24 +1,29 @@
-textarea.editor{
-    resize: none;
-    width: 100%;
-    height: 100%;
-    box-sizing: border-box;
-    overflow-y: hidden;
+div.editorContainer {
+    padding: 0 1rem;
+    textarea.editor {
+        resize: none;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        overflow-y: hidden;
+    }
 }
 
 //サイズ測定用のダミー要素
-p.dummy{
+p.dummy {
     visibility: hidden;
     width: 300px;
     background-color: aqua;
     white-space: pre;
-    position:fixed;
+    position: fixed;
 }
 
-p.dummy, textarea.editor{
+p.dummy,
+textarea.editor {
     font-size: large;
     margin: 0;
-    border: solid 1px black;
     padding: 2px;
     box-sizing: border-box;
+    border: solid 1px #ccc;
+    border-radius: 0.25rem;
 }
