--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -2,8 +2,10 @@
     display: flex;
     width: 100%;
     height: 4rem;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 min(2vw,1rem);
+    box-sizing: border-box;
 
     background-color: var(--primary-color);
 
@@ -17,12 +19,14 @@
             height: 100%;
         }
     }
-    
-    h1{
-        margin: 0;
-        flex-grow: 1;
-        text-align: center;
-        color: white;
+    a{
+        text-decoration: none;
+        h1{
+            margin: 0;
+            flex-grow: 1;
+            text-align: center;
+            color: white;
+        }
     }
     div.rightmenu{
         height: 100%;
