パネルの振り分けを変更

--- a/src/app/rootPage.module.scss
+++ b/src/app/rootPage.module.scss
@@ -1,17 +1,18 @@
-div.main{
+div.main {
     display: flex;
     width: 100%;
     justify-content: space-around;
-    .leftPanel{
+    flex-wrap: wrap;
+
+    .leftPanel {
         flex-basis: 300px;
-        flex-grow: 1;
-        flex-shrink: 0;
+        flex-grow: 2;
         height: 100%;
-    }   
-    .rightPanel{
-        flex-basis: 0;
-        flex-grow: 4;
-        flex-shrink: 1;
+    }
+
+    .rightPanel {
+        flex-basis: 300px;
+        flex-grow: 7;
         height: 100%;
         overflow-x: hidden;
     }
