フッターの追加

--- a/src/app/rootPage.module.scss
+++ b/src/app/rootPage.module.scss
@@ -3,6 +3,7 @@ div.main {
     width: 100%;
     justify-content: space-around;
     flex-wrap: wrap;
+    padding: 1rem 0;
 
     .leftPanel {
         flex-basis: 300px;
