--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,39 +1,44 @@
-.header{
+.header {
     display: flex;
     width: 100%;
     height: 4rem;
     justify-content: space-between;
     align-items: center;
-    padding: 0 min(2vw,1rem);
+    padding: 0 min(2vw, 1rem);
     box-sizing: border-box;
 
     background-color: var(--primary-color);
 
-    div.menu{
+    div.menu {
         height: 100%;
         width: 4rem;
         padding: 0.25rem;
         box-sizing: border-box;
-        img{
+
+        img {
             width: 100%;
             height: 100%;
         }
     }
-    a{
+
+    a {
         text-decoration: none;
-        h1{
+
+        p {
             margin: 0;
             flex-grow: 1;
             text-align: center;
             color: white;
         }
     }
-    div.rightmenu{
+
+    div.rightmenu {
         height: 100%;
         width: 4rem;
         padding: 0.25rem;
         box-sizing: border-box;
-        img{
+
+        img {
             width: 100%;
             height: 100%;
         }
