--- a/src/components/chart.module.scss
+++ b/src/components/chart.module.scss
@@ -1,12 +1,15 @@
-div.settings{
+div.settings {
     margin: 0;
     padding: 0.5rem 0.5rem;
 }
-div.ChartContainer{
+
+div.ChartContainer {
     overflow-x: scroll;
     display: flex;
-    align-items:start;
-    div.chart{
+    align-items: start;
+    border: 1px solid #ccc;
+
+    div.chart {
         margin: 1rem;
     }
 }
